# fake-news-ptBR

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1 - Data Aquisition.ipynb  1 - Data Preparation.ipynb  1 - TODO - Data Aquisition.ipynb  2 - Cleaning.ipynb  2 - Data Preparation.ipynb  3 - Cleaning.ipynb  3 - Feature Engineering.ipynb  4 - EDA.ipynb  4 - Exploratory Data Analysis.ipynb  4 - Feature Engineering.ipynb  5 - Exploratory Data Analysis.ipynb  5 - Modeling.ipynb  6 - Hypothesis Testing.ipynb  DadosNormalizados.ipynb  Untitled.ipynb
references/: news_data_dictionary.json
reports/figures/eda/corr_matrix_v2/: fig_corr_matrix_v2.eps
