[tool.poetry]
name = "fake-news-ptbr"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "=2.3.2"
pandas = "=1.1.3"
jupyterlab = "=2.2.9"
unidecode = "=1.1.1"
missingno = "=0.4.2"
seaborn = "=0.11.0"
heatmapz = "=0.0.4"
ipywidgets = "^7.5.1"
nltk = "^3.5"
wordcloud = "^1.8.1"
tqdm = "4.56.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
